ENEX FSL/snapshotDownload (1)/objects/User.object
<CustomObject><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><enableEnhancedLookup>false</enableEnhancedLookup><enableFeeds>true</enableFeeds><externalSharingModel>Private</externalSharingModel><fields><fullName>Cargo_HFV_Retail__c</fullName><externalId>false</externalId><label>Cargo HFV Retail</label><required>false</required><trackFeedHistory>false</trackFeedHistory><type>Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Jefe de Zona Retail</fullName><default>false</default><label>Jefe de Zona Retail</label></value><value><fullName>Área Franquicia</fullName><default>false</default><label>Área Franquicia</label></value><value><fullName>Operaciones</fullName><default>false</default><label>Operaciones</label></value><value><fullName>Legal</fullName><default>false</default><label>Legal</label></value><value><fullName>Distribuidor</fullName><default>false</default><label>Distribuidor</label></value><value><fullName>Subgerente Ventas</fullName><default>false</default><label>Subgerente Ventas</label></value><value><fullName>Gerente Retail</fullName><default>false</default><label>Gerente Retail</label></value><value><fullName>Gerente General</fullName><default>false</default><label>Gerente General</label></value><value><fullName>Jefe de Franquicia</fullName><default>false</default><label>Jefe de Franquicia</label></value><value><fullName>Subgerente E&amp;D</fullName><default>false</default><label>Subgerente E&amp;D</label></value><value><fullName>Analista de Franquicia</fullName><default>false</default><label>Analista de Franquicia</label></value><value><fullName>Supervisión Operaciones Franquicia</fullName><default>false</default><label>Supervisión Operaciones Franquicia</label></value><value><fullName>Capacitador Franquicia</fullName><default>false</default><label>Capacitador Franquicia</label></value><value><fullName>Equipo E&amp;D</fullName><default>false</default><label>Equipo E&amp;D</label></value><value><fullName>Capacitador C&amp;S</fullName><default>false</default><label>Capacitador C&amp;S</label></value><value><fullName>Equipo C&amp;S</fullName><default>false</default><label>Equipo C&amp;S</label></value><value><fullName>Equipo Redes</fullName><default>false</default><label>Equipo Redes</label></value><value><fullName>Jefe Lavado</fullName><default>false</default><label>Jefe Lavado</label></value><value><fullName>Jefe Lubs</fullName><default>false</default><label>Jefe Lubs</label></value><value><fullName>Control de Stock</fullName><default>false</default><label>Control de Stock</label></value><value><fullName>Soporte de Ventas</fullName><default>false</default><label>Soporte de Ventas</label></value><value><fullName>Proveedor Uniformes</fullName><default>false</default><label>Proveedor Uniformes</label></value><value><fullName>Marketing - P&amp;P</fullName><default>false</default><label>Marketing - P&amp;P</label></value><value><fullName>Precios</fullName><default>false</default><label>Precios</label></value><value><fullName>Administrador</fullName><default>false</default><label>Administrador</label></value><value><fullName>Analista de Seguros</fullName><default>false</default><label>Analista de Seguros</label></value><value><fullName>Proveedor Psicolaboral</fullName><default>false</default><label>Proveedor Psicolaboral</label></value><value><fullName>Analista Crédito</fullName><default>false</default><label>Analista Crédito</label></value></valueSetDefinition></valueSet></fields><fields><fullName>Cargo_HFV_Texto__c</fullName><externalId>false</externalId><label>Cargo HFV Texto</label><length>250</length><required>false</required><trackFeedHistory>false</trackFeedHistory><type>Text</type><unique>false</unique></fields><fields><fullName>DB_Region__c</fullName><description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description><externalId>false</externalId><label>DB Region</label><required>false</required><trackFeedHistory>false</trackFeedHistory><type>Picklist</type><valueSet><valueSetDefinition><sorted>false</sorted><value><fullName>NA</fullName><color>#009900</color><default>false</default><label>NA</label></value><value><fullName>EMEA</fullName><color>#3333FF</color><default>false</default><label>EMEA</label></value><value><fullName>APAC</fullName><color>#CC6600</color><default>false</default><label>APAC</label></value><value><fullName>LA</fullName><color>#990000</color><default>false</default><label>LA</label></value></valueSetDefinition></valueSet></fields><fields><fullName>Faena_SGMM__c</fullName><externalId>false</externalId><label>Faena SGMM</label><length>100</length><required>false</required><trackFeedHistory>false</trackFeedHistory><type>Text</type><unique>false</unique></fields><fields><fullName>Gestor__c</fullName><externalId>false</externalId><formula>Manager.FirstName &amp; &quot; &quot; &amp;   Manager.LastName</formula><formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs><label>Gestor</label><required>false</required><type>Text</type><unique>false</unique></fields><fields><fullName>Id_Contacto__c</fullName><externalId>true</externalId><label>Id Contacto</label><length>18</length><required>false</required><trackFeedHistory>false</trackFeedHistory><type>Text</type><unique>false</unique></fields><fields><fullName>Id_Gestor_Nivel_1__c</fullName><externalId>false</externalId><formula>Manager.Id</formula><label>Id Gestor Nivel 1</label><required>false</required><type>Text</type><unique>false</unique></fields><fields><fullName>Nombre_Completo_Usuario__c</fullName><deprecated>false</deprecated><externalId>false</externalId><formula>FirstName +&apos; &apos;+ LastName</formula><label>Nombre Completo Usuario</label><required>false</required><type>Text</type><unique>false</unique></fields><fields><fullName>Nombre_Gestor_Nivel_1__c</fullName><deprecated>false</deprecated><externalId>false</externalId><formula>Manager.FirstName +&apos; &apos;+Manager.LastName</formula><label>Nombre Gestor Nivel 1</label><required>false</required><type>Text</type><unique>false</unique></fields><fields><fullName>id_vendedor__c</fullName><caseSensitive>false</caseSensitive><externalId>true</externalId><label>id vendedor</label><length>50</length><required>false</required><trackFeedHistory>false</trackFeedHistory><type>Text</type><unique>true</unique></fields><fields><fullName>sma__AllowMapAnythingExports__c</fullName><defaultValue>false</defaultValue><deprecated>false</deprecated><externalId>false</externalId><label>Allow MapAnything Exports</label><trackFeedHistory>false</trackFeedHistory><type>Checkbox</type></fields><fields><fullName>sma__DefaultProximityRadius__c</fullName><deprecated>false</deprecated><externalId>false</externalId><label>Default Proximity Radius</label><precision>7</precision><required>false</required><scale>2</scale><trackFeedHistory>false</trackFeedHistory><type>Number</type><unique>false</unique></fields><fields><fullName>sma__EditMapAnythingOrgWirdeQueries__c</fullName><defaultValue>false</defaultValue><deprecated>false</deprecated><externalId>false</externalId><label>Edit MapAnything Org Wide Queries</label><trackFeedHistory>false</trackFeedHistory><type>Checkbox</type></fields><fields><fullName>sma__MABetaTester__c</fullName><defaultValue>false</defaultValue><deprecated>false</deprecated><externalId>false</externalId><label>MapAnything Beta Tester</label><trackFeedHistory>false</trackFeedHistory><type>Checkbox</type></fields><fields><fullName>sma__MADefaultLatitude__c</fullName><deprecated>false</deprecated><externalId>false</externalId><label>MapAnything Default Latitude</label><precision>18</precision><required>false</required><scale>15</scale><trackFeedHistory>false</trackFeedHistory><type>Number</type><unique>false</unique></fields><fields><fullName>sma__MADefaultLongitude__c</fullName><deprecated>false</deprecated><externalId>false</externalId><label>MapAnything Default Longitude</label><precision>18</precision><required>false</required><scale>15</scale><trackFeedHistory>false</trackFeedHistory><type>Number</type><unique>false</unique></fields><fields><fullName>sma__MADefaultType__c</fullName><deprecated>false</deprecated><externalId>false</externalId><label>MADefaultType</label><length>255</length><required>false</required><trackFeedHistory>false</trackFeedHistory><type>Text</type><unique>false</unique></fields><fields><fullName>sma__MADefaultZoomLevel__c</fullName><deprecated>false</deprecated><externalId>false</externalId><label>MapAnything Default Zoom Level</label><precision>2</precision><required>false</required><scale>0</scale><trackFeedHistory>false</trackFeedHistory><type>Number</type><unique>false</unique></fields><fields><fullName>sma__MAMaxExportSize__c</fullName><deprecated>false</deprecated><externalId>false</externalId><label>MapAnything Max Export Size</label><precision>18</precision><required>false</required><scale>0</scale><trackFeedHistory>false</trackFeedHistory><type>Number</type><unique>false</unique></fields><fields><fullName>sma__MAMaxQuerySize__c</fullName><deprecated>false</deprecated><externalId>false</externalId><label>MapAnything Max Query Size</label><precision>6</precision><required>false</required><scale>0</scale><trackFeedHistory>false</trackFeedHistory><type>Number</type><unique>false</unique></fields><fields><fullName>sma__MAVersion__c</fullName><deprecated>false</deprecated><externalId>false</externalId><label>MapAnything Version</label><required>false</required><trackFeedHistory>false</trackFeedHistory><type>Picklist</type><valueSet><valueSetDefinition><sorted>false</sorted><value><fullName>Previous</fullName><default>false</default><label>Previous</label></value><value><fullName>Current</fullName><default>false</default><label>Current</label></value><value><fullName>Beta</fullName><default>false</default><label>Beta</label></value></valueSetDefinition></valueSet></fields><fields><fullName>sma__MapAnythingSettings__c</fullName><deprecated>false</deprecated><externalId>false</externalId><label>Map Anything Settings</label><length>32768</length><trackFeedHistory>false</trackFeedHistory><type>LongTextArea</type><visibleLines>2</visibleLines></fields><fields><fullName>sma__PreferredTypeOfMeasurement__c</fullName><deprecated>false</deprecated><externalId>false</externalId><label>Preferred Type of Measurement</label><required>false</required><trackFeedHistory>false</trackFeedHistory><type>Picklist</type><valueSet><valueSetDefinition><sorted>false</sorted><value><fullName>Miles</fullName><default>false</default><label>Miles</label></value><value><fullName>Km</fullName><default>false</default><label>Km</label></value><value><fullName>Meters</fullName><default>false</default><label>Meters</label></value><value><fullName>Yards</fullName><default>false</default><label>Yards</label></value><value><fullName>Feet</fullName><default>false</default><label>Feet</label></value></valueSetDefinition></valueSet></fields><fields><fullName>sma__ReceiveBatchExceptionEmails__c</fullName><defaultValue>false</defaultValue><deprecated>false</deprecated><externalId>false</externalId><label>Receive Batch Exception Emails</label><trackFeedHistory>false</trackFeedHistory><type>Checkbox</type></fields><fields><fullName>sma__TestUserLookup__c</fullName><deprecated>false</deprecated><description>For blueline bug.</description><externalId>false</externalId><label>TestUserLookup</label><relationshipName>TestChildLookup</relationshipName><restrictedAdminField>false</restrictedAdminField><trackFeedHistory>false</trackFeedHistory><type>Hierarchy</type></fields><listViews><fullName>Activos</fullName><columns>FULL_NAME</columns><columns>CORE.USERS.ALIAS</columns><columns>CORE.USERS.USERNAME</columns><columns>CORE.USERS.LAST_LOGIN</columns><columns>CORE.USER_ROLE.NAME</columns><columns>CORE.USERS.ACTIVE</columns><columns>CORE.PROFILE.NAME</columns><columns>MANAGER</columns><columns>CORE.USERS.DEPARTMENT</columns><filterScope>Everything</filterScope><filters><field>CORE.USERS.ACTIVE</field><operation>equals</operation><value>1</value></filters><label>Activos</label><language>es</language></listViews><listViews><fullName>Jefes_de_Zona_Retail</fullName><columns>FULL_NAME</columns><columns>CORE.USERS.ALIAS</columns><columns>CORE.USERS.USERNAME</columns><columns>CORE.USERS.LAST_LOGIN</columns><columns>CORE.USER_ROLE.NAME</columns><columns>CORE.USERS.ACTIVE</columns><columns>CORE.PROFILE.NAME</columns><columns>MANAGER</columns><filterScope>Everything</filterScope><filters><field>CORE.PROFILE.NAME</field><operation>equals</operation><value>Jefe Zona Ventas Retail</value></filters><filters><field>CORE.USERS.ACTIVE</field><operation>equals</operation><value>1</value></filters><label>Jefes de Zona Retail</label><language>es</language></listViews><listViews><fullName>Portal_Distribuidores</fullName><booleanFilter>1 OR 2</booleanFilter><columns>FULL_NAME</columns><columns>CORE.USERS.ALIAS</columns><columns>CORE.USERS.USERNAME</columns><columns>CORE.USERS.LAST_LOGIN</columns><columns>CORE.USER_ROLE.NAME</columns><columns>CORE.USERS.ACTIVE</columns><columns>CORE.PROFILE.NAME</columns><columns>MANAGER</columns><filterScope>Everything</filterScope><filters><field>CORE.PROFILE.NAME</field><operation>equals</operation><value>Distribuidor</value></filters><filters><field>CORE.PROFILE.NAME</field><operation>equals</operation><value>Proveedor</value></filters><label>Portal Distribuidores</label><language>es</language></listViews><listViews><fullName>Todos_los_usuarios</fullName><columns>FULL_NAME</columns><columns>CORE.USERS.ALIAS</columns><columns>CORE.USERS.USERNAME</columns><columns>CORE.USERS.LAST_LOGIN</columns><columns>CORE.USER_ROLE.NAME</columns><columns>CORE.USERS.ACTIVE</columns><columns>CORE.PROFILE.NAME</columns><columns>MANAGER</columns><columns>CREATED_DATE</columns><columns>IS_FROZEN</columns><filterScope>Everything</filterScope><label>Todos los usuarios</label><language>es</language><sharedTo><role>Especialista_de_Precios_Combustibles_B2B</role></sharedTo></listViews><listViews><fullName>Todos_los_usuarios_MDA</fullName><columns>FULL_NAME</columns><columns>CORE.USERS.ALIAS</columns><columns>CORE.USERS.USERNAME</columns><columns>CORE.USERS.EMAIL</columns><columns>CORE.USERS.LAST_LOGIN</columns><columns>CORE.USER_ROLE.NAME</columns><columns>CORE.USERS.ACTIVE</columns><columns>CORE.PROFILE.NAME</columns><columns>MANAGER</columns><columns>CREATED_DATE</columns><columns>CORE.USERS.DEPARTMENT</columns><filterScope>Everything</filterScope><filters><field>CORE.PROFILE.NAME</field><operation>contains</operation><value>MDA</value></filters><filters><field>CORE.USERS.ACTIVE</field><operation>equals</operation><value>1</value></filters><label>Todos los usuarios MDA</label><language>es</language></listViews><listViews><fullName>Usuarios_Activos_2</fullName><columns>MANAGER</columns><columns>CORE.USERS.DEPARTMENT</columns><columns>FULL_NAME</columns><columns>CORE.USERS.ALIAS</columns><columns>CORE.USERS.USERNAME</columns><columns>CORE.USERS.LAST_LOGIN</columns><columns>CORE.USERS.EMAIL</columns><columns>CORE.USER_ROLE.NAME</columns><columns>CORE.PROFILE.NAME</columns><columns>CORE.USERS.ACTIVE</columns><columns>LOCALE</columns><columns>TIMEZONE</columns><filterScope>Everything</filterScope><filters><field>CORE.USERS.ACTIVE</field><operation>notEqual</operation><value>0</value></filters><filters><field>CORE.PROFILE.NAME</field><operation>notContain</operation><value>chatter</value></filters><filters><field>CORE.PROFILE.NAME</field><operation>notContain</operation><value>distri</value></filters><label>Usuarios Activos Licencias Enterprice</label><language>es</language></listViews><listViews><fullName>Usuarios_Inversiones_Enex_activos</fullName><booleanFilter>1 AND 2</booleanFilter><columns>FULL_NAME</columns><columns>CORE.USERS.EMAIL</columns><columns>CREATED_DATE</columns><columns>CORE.USERS.ALIAS</columns><columns>CORE.USERS.USERNAME</columns><columns>CORE.USERS.LAST_LOGIN</columns><columns>CORE.USER_ROLE.NAME</columns><columns>CORE.PROFILE.NAME</columns><columns>CORE.USERS.ACTIVE</columns><columns>LOCALE</columns><columns>CORE.USERS.DEPARTMENT</columns><columns>CORE.USERS.TITLE</columns><filterScope>Everything</filterScope><filters><field>CORE.USERS.ACTIVE</field><operation>equals</operation><value>1</value></filters><filters><field>CORE.USERS.COMPANY_NAME</field><operation>contains</operation><value>inversiones</value></filters><label>Usuarios Inversiones Enex - activos</label><language>es</language></listViews><listViews><fullName>Usuarios_force_com_light</fullName><columns>FULL_NAME</columns><columns>CORE.USERS.EMAIL</columns><columns>CREATED_DATE</columns><columns>CORE.USERS.ALIAS</columns><columns>CORE.USERS.USERNAME</columns><columns>CORE.USERS.LAST_LOGIN</columns><columns>CORE.USER_ROLE.NAME</columns><columns>CORE.PROFILE.NAME</columns><columns>CORE.USERS.ACTIVE</columns><filterScope>Everything</filterScope><filters><field>CORE.USERS.ACTIVE</field><operation>equals</operation><value>1</value></filters><filters><field>CORE.PROFILE.NAME</field><operation>contains</operation><value>force.com light</value></filters><label>Usuarios force.com light</label><language>es</language></listViews><sharingModel>Read</sharingModel></CustomObject>